# ByteLlama

./: .gitmodules  Dockerfile  README.md  docker-compose.yml  postreq.json
.github/workflows/: api-llama-7b-chat-q4.yml  api-llama-7b.yml  api-llama2-7b-chat-q4.yml  api-llama2-7b-chat-q8.yml  api-panda-7b.yml  api.yml  ci.yml
llama-frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
llama-frontend/src/: App.css  App.jsx  main.jsx
llama-web-server/: Dockerfile
llama-web-server/WasmLlama/: Cargo.toml
llama-web-server/WasmLlama/src/: main.rs
models/7B/: LlamaWeightsDownload.txt
models/Open7B/: OpenLlamaWeightsDownload.txt
models/Panda7B_Instr/: PandaWeightsDownload.txt
